== 0.9.5 / ???

* Lattice branch (Bloom^L) merged
* Restore support for each_with_index() over Bud collections
* Support user-specified code blocks in argagg(), argmin() and argmax()
* Fix bug in argagg state materialization
* Fix bug in chaining argmin() or argmax() expressions
* Fix bug in chaining notin() expressions

== 0.9.4 / 2012-09-06

* Optimize grouping performance
* Fix regression in dbm-backed collections with MRI 1.8
* Fix regression in grouping operator with MRI 1.8 (#280)
* Fix bug in programs that applied non-monotonic operators to scratch
  collections under certain circumstances (#281)
* Fix bug in "notin" with multiple qualifiers (#282)

== 0.9.3 / 2012-08-20

* Change behavior of accum() aggregate to return a Set, rather than an Array in
  an unspecified order
* Fix several serious bugs in caching/invalidation of materialized operator
  state (#276, #278, #279)
* Avoid possible spurious infinite loop with dbm-backed collections
* Optimize aggregation/grouping performance
* Fix bugs and improve performance for materialization of sort operator
* Fix REBL regression with push-based runtime (#274)
* Minor performance optimizations for simple projection rules
* Remove dependency on gchart
* Built-in support for code coverage with MRI 1.9 and SimpleCov

== 0.9.2 / 2012-05-19

* Add new aggregate functions: bool_and() and bool_or()
* Fix bugs in notin() stratification and implementation (#271)
* Fix a bug in processing multi-way joins defined inside modules
* Fix two bugs in reduce() operator
  * Incorrect default value was sometimes returned
  * Didn't handle reduce() outputs that aren't tuples with two fields
* Improve reduce() operator error reporting
* Improve MRI 1.9 compatibility

== 0.9.1 / 2012-04-10

* Reject attempts to insert a tuple into a collection with more fields than are
  in the collection's schema
  * Previous behavior was to ignore additional fields, but this was found to be
    error-prone