@@ -763,9 +763,20 @@ module Bud
       return to_push_elem.join(collection)
     end
 
+    def prep_aggpairs(aggpairs)
+      aggpairs.map do |ap|
+        agg, *rest = ap
+        if rest.empty?
+          [agg]
+        else
+          [agg] + rest.map {|c| canonicalize_col(c)}
+        end
+      end
+    end
+
     def group(key_cols, *aggpairs, &blk)
       key_cols = key_cols.map{|k| canonicalize_col(k)} unless key_cols.nil?
-      aggpairs = aggpairs.map{|ap| [ap[0], canonicalize_col(ap[1])].compact}
+      aggpairs = prep_aggpairs(aggpairs)
       return to_push_elem.group(key_cols, *aggpairs, &blk)
     end
 
